--- a/output/refs.bib
+++ b/output/refs.bib
@@ -30,6 +30,13 @@
 	volume = "39",
 	pages = "335--400"
 }
+@article{fandmriesz,
+	author = "Frigyes Riesz and Marcel Riesz",
+	title = "Über die Randwerte einer analytischen Funktion",
+	journal = "Quatrième Congrès des Mathématiciens Scandinaves",
+	year = 1916,
+	pages = "27--44"
+}
 @book{rudin2,
 	author = "Walter Rudin",
 	title = "Real and Complex Analysis",
